testsuite/tests/linear/should_fail/LinearTH2.stderr

LinearTH2.hs:4:6: error:
    Function with non-Omega multiplicity not (yet) handled by Template Haskell
      Int -->.(p) Int
